🥶 fixed animation on smaller ports and more

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -81,3 +81,21 @@ select {
       left: 105%;
   }
 }
+
+
+@keyframes changeColor {
+  0% {
+    background-color:  rgb(59 130 246 / var(--tw-bg-opacity)); /* Initial color */
+  }
+  50% {
+    background-color: rgb(96 165 250 / var(--tw-bg-opacity)); /* Intermediate color */
+  }
+  100% {
+    background-color:  rgb(59 130 246 / var(--tw-bg-opacity)); /* Final color, same as initial for a smooth transition */
+  }
+}
+
+.changeColor {
+  animation: changeColor 2s infinite;
+
+}
